# mcp

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile.validation  ERROR_HARMONIZATION.md  FRAMEWORK_PUBLICATION_GUIDE.md  LICENSE-APACHE  LICENSE-MIT  MCP_APPS_SUMMARY.md  MCP_FRAMEWORK_PUBLICATION_PLAN.md  README.md  codecov.yml  doc_test_output.txt  rivet.yaml  run-ui-server.sh  rust-toolchain.toml  security-coverage.info  test-config.json  test_mcp_tools.sh
conformance-tests/: .gitignore  CONFORMANCE-STATUS.md  Cargo.toml  README.md  RESULTS.md  ROADMAP.md  run-conformance.sh
conformance-tests/servers/: hello-world.json  resources-demo.json  test-tools-server.json  ui-enabled-server.json
conformance-tests/src/: config.rs  main.rs  runner.rs  transport.rs
examples/advanced-server-example/: Cargo.toml
examples/backend-example/: Cargo.toml
examples/cli-example/: Cargo.toml
examples/conformance-server/: Cargo.toml
examples/demos/: Cargo.toml
examples/error-harmonization-demo/: Cargo.toml
examples/hello-mcp-component/: Cargo.toml
examples/hello-world-macros/: Cargo.toml  README.md
examples/hello-world-simplified/: Cargo.toml
integration-tests/: Cargo.toml  README.md
integration-tests/src/: auth_server_integration.rs  cli_server_integration.rs  end_to_end_scenarios.rs  lib.rs  monitoring_integration.rs  transport_server_integration.rs
mcp-auth/: Cargo.toml  README.md
mcp-auth/docs/: SETUP.md
mcp-auth/src/: audit.rs  config.rs  consent.rs  jwt.rs  lib.rs  manager.rs  manager_vault.rs  models.rs  performance.rs  storage.rs  validation.rs
mcp-auth/tests/: oauth_basic_tests.rs  oauth_endpoints_tests.rs  oauth_flow_tests.rs  simple_middleware_test.rs  test_utils.rs  vault_integration_tests.rs
mcp-cli/: Cargo.toml  README.md
mcp-cli-derive/: Cargo.toml
mcp-cli-derive/src/: lib.rs
mcp-cli-derive/tests/: derive_tests.rs  test_mcp_backend.rs  test_mcp_config.rs
mcp-cli/src/: config.rs  config_tests.rs  lib.rs  lib_tests.rs  server.rs  utils.rs  utils_tests.rs
mcp-cli/tests/: integration.rs
mcp-client/: Cargo.toml
mcp-client/src/: client.rs  client_tests.rs  error.rs  lib.rs  transport.rs  transport_tests.rs
mcp-external-validation/: Cargo.toml  README.md
mcp-external-validation/examples/: basic_validation.rs  fuzzing_demo.rs  python_compatibility.rs
mcp-external-validation/proptest-regressions/: proptest.txt
mcp-external-validation/python_tests/: run_test.py  test_basic_connection.py  test_error_handling.py  test_resource_access.py  test_tool_execution.py  test_transport_compat.py
mcp-external-validation/scripts/: Makefile  README.md  ecosystem_validator.py  real-world-config.toml  validate-real-world.sh
mcp-external-validation/src/: auth_integration.rs  config.rs  cross_language.rs  ecosystem.rs  error.rs  fuzzing.rs  inspector.rs  jsonrpc.rs  lib.rs  mcp_2025_11_25_tests.rs  mcp_semantic.rs  mcp_validator.rs  proptest.rs  python_sdk.rs  report.rs  security.rs  stdio_integration_tests.rs  stdio_stress_tests.rs  validator.rs
mcp-logging/: Cargo.toml  README.md
mcp-logging/assets/: dashboard-base.css  dashboard-contrast.css  dashboard-dark.css  dashboard-light.css  dashboard.js
mcp-logging/src/: aggregation.rs  alerting.rs  correlation.rs  dashboard.rs  lib.rs  lib_tests.rs  metrics.rs  metrics_tests.rs  persistence.rs  profiling.rs  sanitization.rs  sanitization_tests.rs  structured.rs  structured_tests.rs  telemetry.rs
mcp-macros/: Cargo.toml  README.md
mcp-macros/examples/: auth_configuration.rs
mcp-macros/src/: lib.rs  mcp_backend.rs  mcp_prompt.rs  mcp_resource.rs  mcp_server.rs  mcp_tool.rs  utils.rs
mcp-macros/tests/: advanced_features.rs  app_name_tests.rs  async_sync_tests.rs  auth_features.rs  auth_isolation_test.rs  auth_parameter_test.rs  backend_integration_tests.rs  compilation_and_ui.rs  compilation_tests.rs  compile_time_auth_test.rs  core_functionality.rs  debug_macro.rs  documentation_tests.rs  dual_pattern_test.rs  edge_case_tests.rs  error_handling.rs  error_handling_tests.rs  integration_full_tests.rs  integration_tests.rs  json_serialization_test.rs  macro_attribute_tests.rs  macro_tests.rs  macro_validation_tests.rs  mcp_prompt_tests.rs  mcp_resource_advanced_edge_cases.rs  mcp_resource_edge_cases.rs  mcp_resource_tests.rs  mcp_tool_tests.rs  no_auth_test.rs  parameter_validation_tests.rs  performance_tests.rs  resource_prompt_features.rs  schema_fix_test.rs  security_tests.rs  server_lifecycle_tests.rs  simple_tests.rs  tool_discovery_test.rs  tool_features.rs  tools_only_test.rs  type_system_tests.rs
mcp-monitoring/: Cargo.toml  README.md
mcp-monitoring/src/: collector.rs  collector_tests.rs  config.rs  config_tests.rs  lib.rs  lib_tests.rs  metrics.rs  metrics_tests.rs
mcp-protocol/: Cargo.toml  README.md
mcp-protocol/src/: error.rs  error_tests.rs  errors.rs  lib.rs  lib_tests.rs  model.rs  model_tests.rs  ui.rs  ui_tests.rs  validation.rs  validation_tests.rs
mcp-runtime/: Cargo.toml  README.md
mcp-runtime/src/: io.rs  lib.rs  runtime.rs  sync.rs  time.rs
mcp-security/: Cargo.toml  README.md
mcp-security-middleware/: Cargo.toml  README.md
mcp-security-middleware/src/: auth.rs  config.rs  error.rs  lib.rs  middleware.rs  profiles.rs  utils.rs
mcp-security/src/: config.rs  config_tests.rs  lib.rs  lib_tests.rs  middleware.rs  middleware_tests.rs  validation.rs  validation_tests.rs
mcp-server/: Cargo.toml  README.md
mcp-server/src/: alerting_endpoint.rs  backend.rs  backend_tests.rs  builder_trait.rs  cli_helpers.rs  common_backend.rs  context.rs  context_tests.rs  dashboard_endpoint.rs  handler.rs  handler_tests.rs  health_endpoint.rs  lib.rs  lib_tests.rs  metrics_endpoint.rs  middleware.rs  middleware_tests.rs  server.rs  server_tests.rs  tool_context.rs  (+1 more)
mcp-transport/: Cargo.toml  README.md
pulseengine-auth/: Cargo.toml  README.md
pulseengine-mcp-apps/: Cargo.toml
pulseengine-mcp-resources/: Cargo.toml
wasmtime-wasi-mcp/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_NOTES.md  README.md  TESTING.md
(+554 files in other folders)
