[workspace]
members = [
    "mcp-protocol",
    "mcp-logging",
    "mcp-auth",
    "mcp-security",
    "mcp-monitoring",
    "mcp-transport",
    "mcp-cli",
    "mcp-cli-derive",
    "mcp-server",
    "mcp-external-validation",
    "integration-tests",
    "examples/hello-world",
    "examples/backend-example",
    "examples/cli-example",
    "examples/advanced-server-example",
]

resolver = "2"

[workspace.package]
version = "0.4.1"
rust-version = "1.79"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["PulseEngine Contributors"]
repository = "https://github.com/pulseengine/mcp"
homepage = "https://github.com/pulseengine/mcp"
documentation = "https://docs.rs/pulseengine-mcp-protocol"
keywords = ["mcp", "protocol", "framework", "server", "ai"]
categories = ["api-bindings", "development-tools", "asynchronous"]

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
uuid = { version = "1.11", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"

# Validation
validator = { version = "0.20", features = ["derive"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# System
dirs = "5.0"

# Crypto
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"

# Keyring
keyring = { version = "3.5" }

# CLI dependencies
clap = { version = "4.0", features = ["derive", "env"] }
toml = "0.8"
url = "2.4"

# HTTP/Web 
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["cors", "auth"] }
hyper = { version = "1.4", features = ["full"] }

# WebSocket
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-webpki-roots"] }
tungstenite = { version = "0.24" }

# Async utilities
futures = "0.3"
futures-util = "0.3"

# External validation dependencies
reqwest = { version = "0.11", features = ["json", "stream"] }
jsonschema = "0.18"
schemars = "0.8"
proptest = "1.0"
proptest-derive = "0.4"
tempfile = "3.0"
assert_matches = "1.5"
serde_yaml = "0.9"

# Framework internal dependencies (published versions)
pulseengine-mcp-protocol = { version = "0.4.0", path = "mcp-protocol" }
pulseengine-mcp-logging = { version = "0.4.0", path = "mcp-logging" }
pulseengine-mcp-auth = { version = "0.4.0", path = "mcp-auth" }
pulseengine-mcp-security = { version = "0.4.0", path = "mcp-security" }
pulseengine-mcp-monitoring = { version = "0.4.0", path = "mcp-monitoring" }
pulseengine-mcp-transport = { version = "0.4.0", path = "mcp-transport" }
pulseengine-mcp-cli = { version = "0.4.0", path = "mcp-cli" }
pulseengine-mcp-cli-derive = { version = "0.4.0", path = "mcp-cli-derive" }
pulseengine-mcp-server = { version = "0.4.0", path = "mcp-server" }
pulseengine-mcp-external-validation = { version = "0.4.0", path = "mcp-external-validation" }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[profile.release.package."*"]
opt-level = "s"

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.test]
# Enable debug info for coverage
debug = true

[profile.coverage]
# Profile optimized for coverage collection
inherits = "test"
# Disable optimizations for accurate coverage
opt-level = 0
# Enable full debug info
debug = 2
# Disable inlining for accurate coverage
codegen-units = 1
# Disable link-time optimization
lto = false

[patch.crates-io]
# Patch published crates to use local versions for development
pulseengine-mcp-protocol = { path = "mcp-protocol" }
pulseengine-mcp-logging = { path = "mcp-logging" }
pulseengine-mcp-auth = { path = "mcp-auth" }
pulseengine-mcp-security = { path = "mcp-security" }
pulseengine-mcp-monitoring = { path = "mcp-monitoring" }
pulseengine-mcp-transport = { path = "mcp-transport" }
pulseengine-mcp-cli = { path = "mcp-cli" }
pulseengine-mcp-cli-derive = { path = "mcp-cli-derive" }
pulseengine-mcp-server = { path = "mcp-server" }
pulseengine-mcp-external-validation = { path = "mcp-external-validation" }

