[package]
name = "conformance-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "mcp-conformance"
path = "src/main.rs"

[dependencies]
# Framework dependencies
pulseengine-mcp-protocol.workspace = true

# Core dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true

# CLI
clap.workspace = true

# Async utilities
futures.workspace = true

# Process management
nix = { version = "0.29", features = ["signal", "process"] }

# Colored output
colored = "2.0"
