[package]
name = "pulseengine-mcp-auth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Authentication and authorization framework for MCP servers - PulseEngine MCP Framework"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/pulseengine-mcp-auth"
readme = "README.md"
keywords = ["mcp", "authentication", "authorization", "security", "auth"]
categories = ["authentication", "web-programming"]
rust-version.workspace = true

[dependencies]
pulseengine-mcp-protocol = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

sha2 = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }

keyring = { workspace = true }

[features]
default = []

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"