[package]
name = "pulseengine-mcp-cli-derive"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Derive macros for MCP CLI framework - PulseEngine MCP Framework"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/pulseengine-mcp-cli-derive"
keywords = ["mcp", "cli", "derive", "proc-macro"]
categories = ["development-tools::procedural-macro-helpers"]
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
thiserror = { workspace = true }
async-trait = { workspace = true }

# Framework dependencies (for generated code references)
pulseengine-mcp-protocol = { workspace = true }
pulseengine-mcp-server = { workspace = true }

[dev-dependencies]
trybuild = "1.0"
pulseengine-mcp-cli = { path = "../mcp-cli", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
thiserror = "1.0"