[package]
name = "pulseengine-mcp-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI integration and configuration framework for MCP servers - PulseEngine MCP Framework"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/pulseengine-mcp-cli"
readme = "README.md"
keywords = ["mcp", "cli", "configuration", "derive", "clap"]
categories = ["command-line-interface", "api-bindings", "development-tools"]
rust-version.workspace = true

[dependencies]
pulseengine-mcp-protocol = { workspace = true }
pulseengine-mcp-logging = { workspace = true }

# Core dependencies
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }

# CLI and configuration
clap = { workspace = true, optional = true }
toml = { workspace = true, optional = true }
url = { workspace = true, optional = true }

# Derive macro (separate crate due to proc macro requirements)
pulseengine-mcp-cli-derive = { workspace = true, optional = true }

[features]
default = ["cli", "derive"]
cli = ["clap", "toml", "url"]
derive = ["pulseengine-mcp-cli-derive"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
