[package]
name = "pulseengine-mcp-external-validation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "External validation and compliance testing for MCP servers - PulseEngine MCP Framework"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/pulseengine-mcp-external-validation"
readme = "README.md"
keywords = ["mcp", "validation", "testing", "compliance", "protocol"]
categories = ["development-tools::testing", "web-programming"]
rust-version.workspace = true
publish = false

[dependencies]
# Core framework dependencies
pulseengine-mcp-protocol = { workspace = true }
pulseengine-mcp-server = { workspace = true }
pulseengine-mcp-transport = { workspace = true }
pulseengine-mcp-auth = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP client for external validators
reqwest = { version = "0.11", features = ["json", "stream"] }
url = { workspace = true }

# JSON Schema validation
jsonschema = "0.18"
schemars = "0.8"

# Property-based testing
proptest = { version = "1.0", optional = true }
proptest-derive = { version = "0.4", optional = true }

# Test utilities
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# External process management for inspector testing
# tokio-process = "0.2"  # Using std::process instead

# Command line interface
clap = { workspace = true }

# TOML parsing for configuration
toml = { workspace = true }

# Additional serialization formats
serde_yaml = { workspace = true }

# Fuzzing dependencies
arbitrary = { version = "1.3", features = ["derive"], optional = true }
fastrand = { version = "2.0", optional = true }
base64 = "0.22"
tempfile = "3.0"
which = "6.0"
shellexpand = "3.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
assert_matches = "1.5"

[features]
default = ["inspector", "jsonrpc"]
inspector = []
jsonrpc = []
proptest = ["dep:proptest", "dep:proptest-derive"]
fuzzing = ["dep:arbitrary", "dep:fastrand"]

[[bin]]
name = "mcp-validate"
required-features = []

[[bin]]
name = "mcp-compliance-report"
required-features = []

[[example]]
name = "fuzzing_demo"
required-features = ["fuzzing"]
