[package]
name = "pulseengine-mcp-logging"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Structured logging framework for MCP servers - PulseEngine MCP Framework"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/pulseengine-mcp-logging"
readme = "README.md"
keywords = ["mcp", "logging", "structured", "metrics", "tracing"]
categories = ["development-tools::debugging"]
rust-version.workspace = true

[dependencies]
# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time handling
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Async
tokio = { workspace = true }

# Metrics
uuid = { workspace = true }

# Pattern matching
regex = "1.0"

# Hex encoding
hex = "0.4"

# Static initializer
once_cell = "1.0"

# Metadata
tonic = "0.9"

# OpenTelemetry dependencies removed due to API compatibility issues
# TODO: Re-add when we can properly integrate with the current API versions