[package]
name = "pulseengine-logging"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Structured logging with credential scrubbing, metrics, alerting, and correlation IDs"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/pulseengine-logging"
readme = "README.md"
keywords = ["logging", "structured", "metrics", "tracing", "security"]
categories = ["development-tools::debugging"]
rust-version.workspace = true

[lib]
name = "pulseengine_logging"
path = "src/lib.rs"

[dependencies]
# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time handling
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Async
tokio = { workspace = true }

# Metrics
uuid = { workspace = true }

# Pattern matching
regex = "1.0"

# Hex encoding
hex = "0.4"

# Static initializer
once_cell = "1.0"

# OpenTelemetry dependencies removed due to API compatibility issues
# TODO: Re-add when we can properly integrate with the current API versions
