[package]
name = "pulseengine-mcp-monitoring"
version = "0.3.0"
edition = "2021"
authors = ["Ralf Anton Beier <ralf_beier@me.com>"]
license = "MIT OR Apache-2.0"
description = "Monitoring, metrics, and observability for MCP servers - PulseEngine MCP Framework"
homepage = "https://github.com/avrabe/mcp-loxone"
repository = "https://github.com/avrabe/mcp-loxone"
documentation = "https://docs.rs/pulseengine-mcp-monitoring"
readme = "README.md"
keywords = ["mcp", "monitoring", "metrics", "observability", "telemetry"]
categories = ["development-tools::profiling", "web-programming"]
rust-version = "1.70"

[dependencies]
pulseengine-mcp-protocol = "0.3.0"

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }

[features]
default = ["metrics", "tracing"]
metrics = []
tracing = []
performance = []

[dev-dependencies]
tokio-test = "0.4"