[package]
name = "pulseengine-mcp-monitoring"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Monitoring, metrics, and observability for MCP servers - PulseEngine MCP Framework"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/pulseengine-mcp-monitoring"
readme = "README.md"
keywords = ["mcp", "monitoring", "metrics", "observability", "telemetry"]
categories = ["development-tools::profiling", "web-programming"]
rust-version.workspace = true

[dependencies]
pulseengine-mcp-protocol = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }

[features]
default = ["metrics", "tracing"]
metrics = []
tracing = []
performance = []

[dev-dependencies]
tokio-test = "0.4"