[package]
name = "pulseengine-mcp-security-middleware"
version = "0.11.0"
rust-version = "1.88"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["PulseEngine Contributors"]
repository = "https://github.com/pulseengine/mcp"
homepage = "https://github.com/pulseengine/mcp"
documentation = "https://docs.rs/pulseengine-mcp-security-middleware"
keywords = ["mcp", "security", "middleware", "authentication", "framework"]
categories = ["api-bindings", "development-tools", "asynchronous", "web-programming"]
description = "Zero-configuration security middleware for MCP servers with Axum integration"

[dependencies]
# Core async and utilities
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP and middleware
axum = { workspace = true }
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true }
hyper = { workspace = true }

# Cryptography and security
sha2 = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }

# JWT support
jsonwebtoken = "9.2"
once_cell = "1.19"

# Logging and tracing
tracing = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Time handling
chrono = { workspace = true }

# Environment and configuration
dirs = { workspace = true }

# Validation
validator = { workspace = true }

# Framework internal dependencies
pulseengine-mcp-protocol = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
assert_matches = { workspace = true }
tokio-test = "0.4"

[features]
default = ["auto-config"]
auto-config = []
keyring = ["dep:keyring"]

[dependencies.keyring]
version = "3.5"
optional = true

[lib]
name = "pulseengine_mcp_security_middleware"
path = "src/lib.rs"
