[package]
name = "pulseengine-security"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/pulseengine-security"
keywords = ["security", "middleware", "authentication", "axum", "tower"]
categories = ["api-bindings", "development-tools", "asynchronous", "web-programming"]
description = "Zero-configuration security middleware for Axum/Tower with API key, JWT, CORS, and rate limiting"

[dependencies]
# Core async and utilities
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP and middleware
axum = { workspace = true }
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true }
hyper = { workspace = true }

# Cryptography and security
sha2 = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }

# JWT support
jsonwebtoken = "9.2"
once_cell = "1.19"

# Logging and tracing
tracing = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Time handling
chrono = { workspace = true }

# Environment and configuration
dirs = { workspace = true }

# Validation
validator = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
assert_matches = { workspace = true }
tokio-test = "0.4"
serial_test = "3.0"

[features]
default = ["auto-config"]
auto-config = []
keyring = ["dep:keyring"]

[dependencies.keyring]
version = "3.5"
optional = true

[lib]
name = "pulseengine_security"
path = "src/lib.rs"
