[package]
name = "pulseengine-mcp-security"
version = "0.3.0"
edition = "2021"
authors = ["Ralf Anton Beier <ralf_beier@me.com>"]
license = "MIT OR Apache-2.0"
description = "Security middleware and validation for MCP servers - PulseEngine MCP Framework"
homepage = "https://github.com/avrabe/mcp-loxone"
repository = "https://github.com/avrabe/mcp-loxone"
documentation = "https://docs.rs/pulseengine-mcp-security"
readme = "README.md"
keywords = ["mcp", "security", "validation", "middleware", "sanitization"]
categories = ["web-programming", "authentication"]
rust-version = "1.70"

[dependencies]
pulseengine-mcp-protocol = "0.3.0"

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }

validator = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }

# Optional HTTP middleware support
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

[features]
default = []

[dev-dependencies]
tokio-test = "0.4"