[package]
name = "pulseengine-mcp-security"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Security middleware and validation for MCP servers - PulseEngine MCP Framework"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/pulseengine-mcp-security"
readme = "README.md"
keywords = ["mcp", "security", "validation", "middleware", "sanitization"]
categories = ["web-programming", "authentication"]
rust-version.workspace = true

[dependencies]
pulseengine-mcp-protocol = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }

validator = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }

# Optional HTTP middleware support
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

[features]
default = []

[dev-dependencies]
tokio-test = "0.4"