[package]
name = "pulseengine-mcp-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Generic MCP server infrastructure with pluggable backends - PulseEngine MCP Framework"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/pulseengine-mcp-server"
readme = "README.md"
keywords.workspace = true
categories = ["web-programming::http-server", "api-bindings"]
rust-version.workspace = true

[dependencies]
pulseengine-mcp-protocol = { workspace = true, features = ["logging"] }
pulseengine-mcp-auth = { workspace = true }
pulseengine-mcp-transport = { workspace = true }
pulseengine-mcp-security = { workspace = true }
pulseengine-mcp-monitoring = { workspace = true }
pulseengine-mcp-logging = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }

# Web framework for health and metrics endpoints
axum = "0.7"

# Metrics export
prometheus = "0.14"

# Date/time handling
chrono = { workspace = true }

# Optional stdio logging support
tracing-subscriber = { workspace = true, optional = true }

[features]
default = ["stdio-logging"]
stdio-logging = ["dep:tracing-subscriber"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
axum-test = "15.0"
