[package]
name = "pulseengine-mcp-transport"
version = "0.3.0"
edition = "2021"
authors = ["Ralf Anton Beier <ralf_beier@me.com>"]
license = "MIT OR Apache-2.0"
description = "Transport layer implementations for MCP servers (HTTP/SSE, WebSocket, stdio) - PulseEngine MCP Framework"
homepage = "https://github.com/avrabe/mcp-loxone"
repository = "https://github.com/avrabe/mcp-loxone"
documentation = "https://docs.rs/pulseengine-mcp-transport"
readme = "README.md"
keywords = ["mcp", "transport", "http", "websocket", "stdio"]
categories = ["web-programming::http-server", "network-programming"]
rust-version = "1.70"

[dependencies]
pulseengine-mcp-protocol = "0.3.0"

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }

# HTTP transport dependencies
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }

# WebSocket transport dependencies
tokio-tungstenite = { workspace = true }
tungstenite = { workspace = true }

# Validation dependencies
regex = "1.10"
async-stream = "0.3"
chrono = { workspace = true }

[features]
default = []

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3"
chrono = "0.4"

[[example]]
name = "test_http_sse"
required-features = []

[[example]]
name = "test_mcp_inspector"
required-features = []

[[example]]
name = "test_streamable_http"
required-features = []

[[example]]
name = "test_mcp_unified"
required-features = []