[package]
name = "pulseengine-mcp-apps"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "MCP Apps extension for rmcp — serve interactive HTML UIs via MCP"
keywords = ["mcp", "ui", "html", "rmcp", "apps"]
categories = ["web-programming"]
repository = "https://github.com/pulseengine/mcp"

[dependencies]
rmcp = { version = "1.3", features = ["server"] }
serde_json = "1"
